--- a/fixtures.html
+++ b/fixtures.html
@@ -105,7 +105,7 @@
       </div>
     </div>
     </section>
-    <footer class="bg-danger text-lg-start">
+    <footer class="bg-danger text-lg-start fixed-bottom">
       <div class="text-center p-3">
         <a class="footer-brand" href="https://www.facebook.com/dbuendelafnogetstorre/">
           <img src="./Pictures/facebook.png" alt="Bootstrap" width="40"></a>
